[project]
name = "autoviral"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain-community>=0.4.1",
    "odfpy>=1.4.1",
    "pypdf>=6.9.2",
    "python-docx>=1.2.0",
    "python-pptx>=1.0.2",
    "unstructured>=0.22.16",
]
