[project]
name = "autoviral"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain>=1.2.15",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-ollama>=1.0.1",
    "langchain-text-splitters>=1.1.1",
    "odfpy>=1.4.1",
    "pypandoc-binary>=1.17",
    "pypdf>=6.9.2",
    "python-docx>=1.2.0",
    "python-pptx>=1.0.2",
    "sqlalchemy>=2.0.49",
    "unstructured>=0.22.16",
]
